tests/rosetta/out/C/align-columns.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:37Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:37Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
static list_string slice_list_string(list_string v, int start, int end) {
  if (start < 0)
    start += v.len;
  if (end < 0)
    end += v.len;
  if (start < 0)
    start = 0;
  if (end > v.len)
    end = v.len;
  if (start > end)
    start = end;
  list_string r = list_string_create(end - start);
  for (int i = 0; i < r.len; i++)
    r.data[i] = v.data[start + i];
  return r;
}
typedef struct {
  int text;
  list_int width;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

list_string split(char *s, char *sep) {
  list_string parts = list_string_create(0);
  char *cur = "";
  int i = 0;
  while (i < strlen(s)) {
    if (strlen(sep) > 0 && i + strlen(sep) <= strlen(s) &&
        slice_string(s, i, i + strlen(sep)) == sep) {
      list_string tmp1 = list_string_create(1);
      tmp1.data[0] = cur;
      list_string tmp2 = concat_list_string(parts, tmp1);
      parts = tmp2;
      cur = "";
      i = i + strlen(sep);
    } else {
      cur = cur + slice_string(s, i, i + 1);
      i = i + 1;
    }
  }
  list_string tmp3 = list_string_create(1);
  tmp3.data[0] = cur;
  list_string tmp4 = concat_list_string(parts, tmp3);
  parts = tmp4;
  return parts;
}

list_string rstripEmpty(list_string words) {
  int n = words.len;
  while (n > 0 && words.data[n - 1] == "") {
    n = n - 1;
  }
  list_string tmp5 = slice_list_string(words, 0, n);
  return tmp5;
}

char *spaces(int n) {
  char *out = "";
  int i = 0;
  while (i < n) {
    char *tmp6 = concat_string(out, " ");
    out = tmp6;
    i = i + 1;
  }
  return out;
}

char *pad(char *word, int width, int align) {
  int diff = width - strlen(word);
  if (align == 0) {
    return word + spaces(diff);
  }
  if (align == 2) {
    return spaces(diff) + word;
  }
  int left = (int)((diff / 2));
  int right = diff - left;
  return spaces(left) + word + spaces(right);
}

int newFormatter(char *text) {
  list_string lines = split(text, "\n");
  list_int width = list_int_create(0);
  int i = 0;
  while (i < lines.len) {
    if (strlen(lines.data[i]) == 0) {
      i = i + 1;
      continue;
    }
    list_string words = rstripEmpty(split(lines.data[i], "$"));
    fmtLines = 0;
    int j = 0;
    while (j < words.len) {
      int wlen = strlen(words.data[j]);
      if ((j == 0)) {
        int tmp7_data[1];
        list_int tmp7 = {1, tmp7_data};
        tmp7.data[0] = wlen;
        list_int tmp8 = concat_list_int(width, tmp7);
        width = tmp8;
      } else if (wlen > width.data[j]) {
        width.data[j] = wlen;
      }
      j = j + 1;
    }
    i = i + 1;
  }
  return (tmp_item_t){.text = fmtLines, .width = width};
}

int printFmt(map_string_int f, int align) {
  int lines = (int)(f.data["text"]);
  list_int width = (list_int)(f.data["width"]);
  int i = 0;
  while (i < lines.len) {
    list_string words = lines.data[i];
    char *line = "";
    int j = 0;
    while (j < words.len) {
      line = line + pad(words.data[j], width.data[j], align) + " ";
      j = j + 1;
    }
    printf("%s\n", line);
    i = i + 1;
  }
  printf("\n");
}

int _mochi_main() {
  char *tmp9 = concat_string(
      "Given$a$text$file$of$many$lines,$where$fields$within$a$line\n",
      "are$delineated$by$a$single$'dollar'$character,$write$a$program\n");
  char *tmp10 = concat_string(
      tmp9,
      "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n");
  char *tmp11 =
      concat_string(tmp10, "column$are$separated$by$at$least$one$space.\n");
  char *tmp12 = concat_string(
      tmp11, "Further,$allow$for$each$word$in$a$column$to$be$either$left\n");
  char *tmp13 = concat_string(
      tmp12,
      "justified,$right$justified,$or$center$justified$within$its$column.");
  char *text = tmp13;
  int f = newFormatter(text);
  printFmt(f, 0);
  printFmt(f, 1);
  printFmt(f, 2);
  return 0;
}
int main() { return _mochi_main(); }
